# Bambu-PrintSphere-Standalone-

./: 3d printed case  CMakeLists.txt  MAKERWORLD.md  README.md  sdkconfig.defaults
components/esp32_s3_touch_amoled_1_75/: esp32_s3_touch_amoled_1_75.c
main/: CMakeLists.txt
main/include/error_lookup/: error_lookup.tsv
main/include/hms_en.json/: hms_en.json
main/include/printsphere/: application.hpp  bambu_cloud_client.hpp  bambu_status.hpp  config_store.hpp  error_lookup.hpp  p1s_camera_client.hpp  printer_client.hpp  printer_state.hpp  setup_portal.hpp  status_resolver.hpp  ui.hpp
main/src/: application.cpp  bambu_cloud_client.cpp  bambu_status.cpp  config_store.cpp  error_lookup.cpp  p1s_camera_client.cpp  printer_client.cpp  printer_state.cpp  setup_portal.cpp  status_resolver.cpp  ui.cpp
